--- a/03-CNN.ipynb
+++ b/03-CNN.ipynb
@@ -487,13 +487,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_simple_conv.compile(loss='categorical_crossentropy',\n",
-    "              optimizer=\"sgd\",\n",
-    "              metrics=['accuracy'])"
+    "model_simple_conv.compile(loss='categorical_crossentropy', optimizer=\"sgd\", metrics=['accuracy'])"
    ]
   },
   {
@@ -1073,10 +1071,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model 4: Data Augumentation\n",
+    "\n",
+    "What is it the our small dataset is learning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
