--- a/06-LSTM.ipynb
+++ b/06-LSTM.ipynb
@@ -28,11 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/sh: wget: command not found\n"
+     ]
+    }
+   ],
    "source": [
-    "!wget http://bit.do/deep_toxic_train -P data/"
+    "! wget http://bit.do/deep_toxic_train -P data/"
    ]
   },
   {
@@ -1147,7 +1155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
