--- a/check-libs.ipynb
+++ b/check-libs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,10 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "working_libs = [\"jupyterlab\"]\n",
     "basic_libs = [\"numpy\", \"pandas\"]\n",
     "ml_libs = [\"keras\", \"tensorflow\", \"sklearn\", \"joblib\"]\n",
     "nlp_libs = [\"spacy\", \"gensim\"]\n",
@@ -30,16 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "libs = basic_libs + ml_libs + nlp_libs + vis_libs"
+    "libs = working_libs + basic_libs + ml_libs + nlp_libs + vis_libs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,23 +53,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.14.5 \t  numpy\n",
-      "0.23.3 \t  pandas\n",
-      "2.2.0 \t  keras\n",
-      "1.9.0 \t  tensorflow\n",
-      "0.19.2 \t  sklearn\n",
+      "0.32.1 \t  jupyterlab\n",
+      "1.14.2 \t  numpy\n",
+      "0.22.0 \t  pandas\n",
+      "2.1.5 \t  keras\n",
+      "1.6.0 \t  tensorflow\n",
+      "0.19.1 \t  sklearn\n",
       "0.11 \t  joblib\n",
-      "2.0.11 \t  spacy\n",
+      "2.0.10 \t  spacy\n",
       "3.4.0 \t  gensim\n",
       "2.2.2 \t  matplotlib\n",
-      "0.9.0 \t  seaborn\n",
+      "0.8.1 \t  seaborn\n",
       "2.1.0 \t  altair\n",
       "1.4.1 \t  wordcloud\n"
      ]
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,23 +98,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numpy>=1.14.5\n",
-      "pandas>=0.23.3\n",
-      "keras>=2.2.0\n",
-      "tensorflow>=1.9.0\n",
-      "sklearn>=0.19.2\n",
+      "jupyterlab>=0.32.1\n",
+      "numpy>=1.14.2\n",
+      "pandas>=0.22.0\n",
+      "keras>=2.1.5\n",
+      "tensorflow>=1.6.0\n",
+      "sklearn>=0.19.1\n",
       "joblib>=0.11\n",
-      "spacy>=2.0.11\n",
+      "spacy>=2.0.10\n",
       "gensim>=3.4.0\n",
       "matplotlib>=2.2.2\n",
-      "seaborn>=0.9.0\n",
+      "seaborn>=0.8.1\n",
       "altair>=2.1.0\n",
       "wordcloud>=1.4.1\n"
      ]
@@ -124,29 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['numpy>=1.14.5',\n",
-       " 'pandas>=0.23.3',\n",
-       " 'keras>=2.2.0',\n",
-       " 'tensorflow>=1.9.0',\n",
-       " 'sklearn>=0.19.2',\n",
-       " 'spacy>=2.0.11',\n",
-       " 'gensim>=3.4.0',\n",
-       " 'matplotlib>=2.2.2',\n",
-       " 'seaborn>=0.9.0',\n",
-       " 'altair>=2.1.0']"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lib_rqmt"
    ]
