--- a/food/baseline-model.ipynb
+++ b/food/baseline-model.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import keras\n",
     "from keras.preprocessing.image import load_img, img_to_array, array_to_img, ImageDataGenerator\n",
@@ -19,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,16 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = load_img('data/food/Dosa/img1.jpeg')"
+    "img = load_img('food/Dosa/img1.jpeg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +72,7 @@
        "(194, 259, 3)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,16 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f9e8482e240>"
+       "<matplotlib.image.AxesImage at 0x7fe1e4475e10>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -839,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -883,22 +893,40 @@
     }
    ],
    "source": [
-    "train_generator = get_batches('data/food/', 'training')\n",
-    "val_generator = get_batches('data/food/', 'validation')"
+    "train_generator = get_batches('food/', 'training')\n",
+    "val_generator = get_batches('food/', 'validation')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.2/resnet50_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+      "94658560/94653016 [==============================] - 1s 0us/step\n"
+     ]
+    }
+   ],
    "source": [
     "base_model = ResNet50(include_top=False, input_shape=(224,224,3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size=8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -960,8 +988,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 1/71 [..............................] - ETA: 12:51 - loss: 1.4618 - acc: 0.5000"
+      "250/250 [==============================] - 175s 702ms/step - loss: 1.5156 - acc: 0.3185 - val_loss: 9.7974 - val_acc: 0.3209\n",
+      "\n",
+      "Epoch 00001: val_loss improved from inf to 9.79735, saving model to model-trflrn-001.h5\n",
+      "Epoch 2/20\n",
+      "250/250 [==============================] - 111s 446ms/step - loss: 1.3696 - acc: 0.3460 - val_loss: 2.4048 - val_acc: 0.4329\n",
+      "\n",
+      "Epoch 00002: val_loss improved from 9.79735 to 2.40482, saving model to model-trflrn-002.h5\n",
+      "Epoch 3/20\n",
+      "250/250 [==============================] - 110s 440ms/step - loss: 1.2959 - acc: 0.4115 - val_loss: 2.2675 - val_acc: 0.3278\n",
+      "\n",
+      "Epoch 00003: val_loss improved from 2.40482 to 2.26753, saving model to model-trflrn-003.h5\n",
+      "Epoch 4/20\n",
+      "250/250 [==============================] - 111s 444ms/step - loss: 1.1802 - acc: 0.4830 - val_loss: 3.2671 - val_acc: 0.3472\n",
+      "\n",
+      "Epoch 00004: val_loss did not improve\n",
+      "Epoch 5/20\n",
+      "250/250 [==============================] - 110s 441ms/step - loss: 1.1515 - acc: 0.4930 - val_loss: 2.0850 - val_acc: 0.3776\n",
+      "\n",
+      "Epoch 00005: val_loss improved from 2.26753 to 2.08503, saving model to model-trflrn-005.h5\n",
+      "Epoch 6/20\n",
+      "250/250 [==============================] - 111s 443ms/step - loss: 1.1130 - acc: 0.5200 - val_loss: 1.4089 - val_acc: 0.4412\n",
+      "\n",
+      "Epoch 00006: val_loss improved from 2.08503 to 1.40893, saving model to model-trflrn-006.h5\n",
+      "Epoch 7/20\n",
+      "250/250 [==============================] - 111s 445ms/step - loss: 1.0159 - acc: 0.5850 - val_loss: 1.4033 - val_acc: 0.5851\n",
+      "\n",
+      "Epoch 00007: val_loss improved from 1.40893 to 1.40332, saving model to model-trflrn-007.h5\n",
+      "Epoch 8/20\n",
+      "250/250 [==============================] - 111s 443ms/step - loss: 0.9838 - acc: 0.5980 - val_loss: 3.1931 - val_acc: 0.3154\n",
+      "\n",
+      "Epoch 00008: val_loss did not improve\n",
+      "Epoch 9/20\n",
+      "250/250 [==============================] - 111s 442ms/step - loss: 0.9567 - acc: 0.5905 - val_loss: 1.9045 - val_acc: 0.5242\n",
+      "\n",
+      "Epoch 00009: val_loss did not improve\n",
+      "Epoch 10/20\n",
+      "250/250 [==============================] - 111s 443ms/step - loss: 0.8848 - acc: 0.6430 - val_loss: 1.9148 - val_acc: 0.4412\n",
+      "\n",
+      "Epoch 00010: val_loss did not improve\n",
+      "Epoch 11/20\n",
+      "250/250 [==============================] - 110s 441ms/step - loss: 0.8427 - acc: 0.6500 - val_loss: 0.8806 - val_acc: 0.6611\n",
+      "\n",
+      "Epoch 00011: val_loss improved from 1.40332 to 0.88059, saving model to model-trflrn-011.h5\n",
+      "Epoch 12/20\n",
+      "250/250 [==============================] - 110s 440ms/step - loss: 0.7854 - acc: 0.6760 - val_loss: 2.4832 - val_acc: 0.4412\n",
+      "\n",
+      "Epoch 00012: val_loss did not improve\n",
+      "Epoch 13/20\n",
+      "250/250 [==============================] - 111s 443ms/step - loss: 0.7845 - acc: 0.6810 - val_loss: 1.2238 - val_acc: 0.5325\n",
+      "\n",
+      "Epoch 00013: val_loss did not improve\n",
+      "Epoch 14/20\n",
+      "250/250 [==============================] - 111s 444ms/step - loss: 0.7227 - acc: 0.7190 - val_loss: 3.8129 - val_acc: 0.3638\n",
+      "\n",
+      "Epoch 00014: val_loss did not improve\n",
+      "Epoch 15/20\n",
+      "250/250 [==============================] - 111s 443ms/step - loss: 0.6891 - acc: 0.7190 - val_loss: 1.3907 - val_acc: 0.5947\n",
+      "\n",
+      "Epoch 00015: val_loss did not improve\n",
+      "Epoch 16/20\n",
+      "250/250 [==============================] - 111s 444ms/step - loss: 0.6657 - acc: 0.7445 - val_loss: 0.8599 - val_acc: 0.7192\n",
+      "\n",
+      "Epoch 00016: val_loss improved from 0.88059 to 0.85987, saving model to model-trflrn-016.h5\n",
+      "Epoch 17/20\n",
+      "250/250 [==============================] - 110s 440ms/step - loss: 0.6148 - acc: 0.7750 - val_loss: 1.8158 - val_acc: 0.5214\n",
+      "\n",
+      "Epoch 00017: val_loss did not improve\n",
+      "Epoch 18/20\n",
+      "250/250 [==============================] - 111s 442ms/step - loss: 0.6014 - acc: 0.7690 - val_loss: 0.8172 - val_acc: 0.7427\n",
+      "\n",
+      "Epoch 00018: val_loss improved from 0.85987 to 0.81719, saving model to model-trflrn-018.h5\n",
+      "Epoch 19/20\n",
+      "250/250 [==============================] - 111s 443ms/step - loss: 0.5818 - acc: 0.7870 - val_loss: 0.8863 - val_acc: 0.7746\n",
+      "\n",
+      "Epoch 00019: val_loss did not improve\n",
+      "Epoch 20/20\n",
+      "250/250 [==============================] - 111s 442ms/step - loss: 0.5484 - acc: 0.8000 - val_loss: 3.6932 - val_acc: 0.5048\n",
+      "\n",
+      "Epoch 00020: val_loss did not improve\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fe173a88cc0>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
