--- a/Version1/02-Theory.ipynb
+++ b/Version1/02-Theory.ipynb
@@ -27,9 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
@@ -40,12 +48,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = np.arange(-10,10,0.1)\n",
     "y = np.arange(-10,10,0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ -1.00000000e+01,  -9.90000000e+00,  -9.80000000e+00,\n",
+       "        -9.70000000e+00,  -9.60000000e+00,  -9.50000000e+00,\n",
+       "        -9.40000000e+00,  -9.30000000e+00,  -9.20000000e+00,\n",
+       "        -9.10000000e+00,  -9.00000000e+00,  -8.90000000e+00,\n",
+       "        -8.80000000e+00,  -8.70000000e+00,  -8.60000000e+00,\n",
+       "        -8.50000000e+00,  -8.40000000e+00,  -8.30000000e+00,\n",
+       "        -8.20000000e+00,  -8.10000000e+00,  -8.00000000e+00,\n",
+       "        -7.90000000e+00,  -7.80000000e+00,  -7.70000000e+00,\n",
+       "        -7.60000000e+00,  -7.50000000e+00,  -7.40000000e+00,\n",
+       "        -7.30000000e+00,  -7.20000000e+00,  -7.10000000e+00,\n",
+       "        -7.00000000e+00,  -6.90000000e+00,  -6.80000000e+00,\n",
+       "        -6.70000000e+00,  -6.60000000e+00,  -6.50000000e+00,\n",
+       "        -6.40000000e+00,  -6.30000000e+00,  -6.20000000e+00,\n",
+       "        -6.10000000e+00,  -6.00000000e+00,  -5.90000000e+00,\n",
+       "        -5.80000000e+00,  -5.70000000e+00,  -5.60000000e+00,\n",
+       "        -5.50000000e+00,  -5.40000000e+00,  -5.30000000e+00,\n",
+       "        -5.20000000e+00,  -5.10000000e+00,  -5.00000000e+00,\n",
+       "        -4.90000000e+00,  -4.80000000e+00,  -4.70000000e+00,\n",
+       "        -4.60000000e+00,  -4.50000000e+00,  -4.40000000e+00,\n",
+       "        -4.30000000e+00,  -4.20000000e+00,  -4.10000000e+00,\n",
+       "        -4.00000000e+00,  -3.90000000e+00,  -3.80000000e+00,\n",
+       "        -3.70000000e+00,  -3.60000000e+00,  -3.50000000e+00,\n",
+       "        -3.40000000e+00,  -3.30000000e+00,  -3.20000000e+00,\n",
+       "        -3.10000000e+00,  -3.00000000e+00,  -2.90000000e+00,\n",
+       "        -2.80000000e+00,  -2.70000000e+00,  -2.60000000e+00,\n",
+       "        -2.50000000e+00,  -2.40000000e+00,  -2.30000000e+00,\n",
+       "        -2.20000000e+00,  -2.10000000e+00,  -2.00000000e+00,\n",
+       "        -1.90000000e+00,  -1.80000000e+00,  -1.70000000e+00,\n",
+       "        -1.60000000e+00,  -1.50000000e+00,  -1.40000000e+00,\n",
+       "        -1.30000000e+00,  -1.20000000e+00,  -1.10000000e+00,\n",
+       "        -1.00000000e+00,  -9.00000000e-01,  -8.00000000e-01,\n",
+       "        -7.00000000e-01,  -6.00000000e-01,  -5.00000000e-01,\n",
+       "        -4.00000000e-01,  -3.00000000e-01,  -2.00000000e-01,\n",
+       "        -1.00000000e-01,  -3.55271368e-14,   1.00000000e-01,\n",
+       "         2.00000000e-01,   3.00000000e-01,   4.00000000e-01,\n",
+       "         5.00000000e-01,   6.00000000e-01,   7.00000000e-01,\n",
+       "         8.00000000e-01,   9.00000000e-01,   1.00000000e+00,\n",
+       "         1.10000000e+00,   1.20000000e+00,   1.30000000e+00,\n",
+       "         1.40000000e+00,   1.50000000e+00,   1.60000000e+00,\n",
+       "         1.70000000e+00,   1.80000000e+00,   1.90000000e+00,\n",
+       "         2.00000000e+00,   2.10000000e+00,   2.20000000e+00,\n",
+       "         2.30000000e+00,   2.40000000e+00,   2.50000000e+00,\n",
+       "         2.60000000e+00,   2.70000000e+00,   2.80000000e+00,\n",
+       "         2.90000000e+00,   3.00000000e+00,   3.10000000e+00,\n",
+       "         3.20000000e+00,   3.30000000e+00,   3.40000000e+00,\n",
+       "         3.50000000e+00,   3.60000000e+00,   3.70000000e+00,\n",
+       "         3.80000000e+00,   3.90000000e+00,   4.00000000e+00,\n",
+       "         4.10000000e+00,   4.20000000e+00,   4.30000000e+00,\n",
+       "         4.40000000e+00,   4.50000000e+00,   4.60000000e+00,\n",
+       "         4.70000000e+00,   4.80000000e+00,   4.90000000e+00,\n",
+       "         5.00000000e+00,   5.10000000e+00,   5.20000000e+00,\n",
+       "         5.30000000e+00,   5.40000000e+00,   5.50000000e+00,\n",
+       "         5.60000000e+00,   5.70000000e+00,   5.80000000e+00,\n",
+       "         5.90000000e+00,   6.00000000e+00,   6.10000000e+00,\n",
+       "         6.20000000e+00,   6.30000000e+00,   6.40000000e+00,\n",
+       "         6.50000000e+00,   6.60000000e+00,   6.70000000e+00,\n",
+       "         6.80000000e+00,   6.90000000e+00,   7.00000000e+00,\n",
+       "         7.10000000e+00,   7.20000000e+00,   7.30000000e+00,\n",
+       "         7.40000000e+00,   7.50000000e+00,   7.60000000e+00,\n",
+       "         7.70000000e+00,   7.80000000e+00,   7.90000000e+00,\n",
+       "         8.00000000e+00,   8.10000000e+00,   8.20000000e+00,\n",
+       "         8.30000000e+00,   8.40000000e+00,   8.50000000e+00,\n",
+       "         8.60000000e+00,   8.70000000e+00,   8.80000000e+00,\n",
+       "         8.90000000e+00,   9.00000000e+00,   9.10000000e+00,\n",
+       "         9.20000000e+00,   9.30000000e+00,   9.40000000e+00,\n",
+       "         9.50000000e+00,   9.60000000e+00,   9.70000000e+00,\n",
+       "         9.80000000e+00,   9.90000000e+00])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
    ]
   },
   {
@@ -280,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
