--- a/food/dosa-nodosa.ipynb
+++ b/food/dosa-nodosa.ipynb
@@ -61,16 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = load_img('food-binary/Dosa/img39.jpeg')"
+    "img = load_img('../data/food-binary/Dosa/img39.jpeg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "(194, 259, 3)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,16 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fb3f8dd47b8>"
+       "<matplotlib.image.AxesImage at 0x7fd5b21ded30>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -155,13 +155,13 @@
     }
    ],
    "source": [
-    "train_generator = get_batches('food-binary/', 'training')\n",
-    "val_generator = get_batches('food-binary/', 'validation')"
+    "train_generator = get_batches('../data/food-binary/', 'training')\n",
+    "val_generator = get_batches('../data/food-binary/', 'validation')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "{'Dosa': 0, 'NoDosa': 1}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -228,16 +228,16 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/1\n",
-      "71/71 [==============================] - 6s 88ms/step - loss: 0.4258 - acc: 0.8152 - val_loss: 0.6009 - val_acc: 0.6478\n"
+      "71/71 [==============================] - 6s 82ms/step - loss: 7.8917 - acc: 0.5009 - val_loss: 8.0590 - val_acc: 0.5000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fb3f21871d0>"
+       "<keras.callbacks.History at 0x7fd5b0fd4208>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +909,7 @@
    "outputs": [],
    "source": [
     "m.compile(loss='binary_crossentropy',\n",
-    "              optimizer='adam',\n",
+    "              optimizer='sgd',\n",
     "              metrics=['accuracy'])"
    ]
   },
@@ -979,7 +979,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
