--- a/011-RNN-LSTM-Toxic.ipynb
+++ b/011-RNN-LSTM-Toxic.ipynb
@@ -13,9 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -41,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +178,7 @@
        "4             0        0       0       0              0  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +227,7 @@
        "Name: comment_text, dtype: object"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +333,7 @@
        "0.9041555169799024"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +373,7 @@
        "((127656, 200), (31915, 200), (127656, 2), (31915, 2))"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -432,15 +440,11 @@
      "text": [
       "Train on 102124 samples, validate on 25532 samples\n",
       "Epoch 1/5\n",
-      "102124/102124 [==============================] - 249s 2ms/step - loss: 0.1538 - acc: 0.9463 - val_loss: 0.1717 - val_acc: 0.9554\n",
+      "102124/102124 [==============================] - 250s 2ms/step - loss: 0.1656 - acc: 0.9442 - val_loss: 0.1260 - val_acc: 0.9564\n",
       "Epoch 2/5\n",
-      "102124/102124 [==============================] - 249s 2ms/step - loss: 0.1262 - acc: 0.9562 - val_loss: 0.1270 - val_acc: 0.9569\n",
+      "102124/102124 [==============================] - 234s 2ms/step - loss: 0.1268 - acc: 0.9564 - val_loss: 0.1252 - val_acc: 0.9557\n",
       "Epoch 3/5\n",
-      "102124/102124 [==============================] - 249s 2ms/step - loss: 0.1208 - acc: 0.9575 - val_loss: 0.1219 - val_acc: 0.9577\n",
-      "Epoch 4/5\n",
-      "102124/102124 [==============================] - 248s 2ms/step - loss: 0.1175 - acc: 0.9588 - val_loss: 0.1202 - val_acc: 0.9573\n",
-      "Epoch 5/5\n",
-      "102124/102124 [==============================] - 248s 2ms/step - loss: 0.1147 - acc: 0.9594 - val_loss: 0.1198 - val_acc: 0.9580\n"
+      " 95744/102124 [===========================>..] - ETA: 13s - loss: 0.1205 - acc: 0.9581"
      ]
     }
    ],
