--- a/012-PreTrained-Toxic.ipynb
+++ b/012-PreTrained-Toxic.ipynb
@@ -13,9 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -41,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +178,7 @@
        "4             0        0       0       0              0  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +227,7 @@
        "Name: comment_text, dtype: object"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +333,7 @@
        "0.9041555169799024"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +373,7 @@
        "((127656, 200), (31915, 200), (127656, 2), (31915, 2))"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,6 +382,53 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 1a: Creating pre-trained Embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_dim = 128\n",
+    "\n",
+    "embedding_matrix = np.zeros((max_words, embedding_dim))\n",
+    "for word, i in word_index.items():\n",
+    "    if i < max_words:\n",
+    "        embedding_vector = embeddings_index.get(word)\n",
+    "        if embedding_vector is not None:\n",
+    "            embedding_matrix[i] = embedding_vector\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
