--- a/011-RNN-LSTM-Toxic.ipynb
+++ b/011-RNN-LSTM-Toxic.ipynb
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,11 @@
       "Epoch 2/5\n",
       "102124/102124 [==============================] - 234s 2ms/step - loss: 0.1268 - acc: 0.9564 - val_loss: 0.1252 - val_acc: 0.9557\n",
       "Epoch 3/5\n",
-      " 95744/102124 [===========================>..] - ETA: 13s - loss: 0.1205 - acc: 0.9581"
+      "102124/102124 [==============================] - 232s 2ms/step - loss: 0.1214 - acc: 0.9578 - val_loss: 0.1226 - val_acc: 0.9585\n",
+      "Epoch 4/5\n",
+      "102124/102124 [==============================] - 233s 2ms/step - loss: 0.1177 - acc: 0.9582 - val_loss: 0.1201 - val_acc: 0.9577\n",
+      "Epoch 5/5\n",
+      "102124/102124 [==============================] - 234s 2ms/step - loss: 0.1161 - acc: 0.9591 - val_loss: 0.1199 - val_acc: 0.9577\n"
      ]
     }
    ],
